feat: 构建获取指定学生课程的相关 API; 添加 teachers 表
