# backend/router/api/v1/student.go
@@ -30,3 +30,24 @@ func GetStudentByID(c *gin.Context) {
 		"student": student,
 	})
 }
+
+// GetAllStudents godoc
+// @Summary      根据获取全体学生信息
+// @Description  根据获取全体学生信息
+// @Tags         student
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  []model.Student
+// @Router       /student [get]
+func GetAllStudents(c *gin.Context) {
+	students, err := model.GetAllStudents()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"message": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"student": students,
+	})
+}
